# toon-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  demo.tape  docker-compose.yml  sample.json  toon-demo
.claude/commands/: implement-task.md  run-all-tasks.md  verify-task.md
.claude/tasks/: 001-scaffold.md  002-bootstrap.md  003-encode.md  004-decode.md  005-validate.md  006-stats.md  007-testing.md  008-docs.md  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  server.rs
src/core/: mod.rs  types.rs
src/server/: http.rs  mcp.rs  mod.rs
src/tools/: mod.rs
tests/: core_tests.rs  http_tests.rs  round_trip.rs
tests/common/: mod.rs
tests/fixtures/valid/: tabular.json  tabular.toon
tests/integration/: mod.rs
