[package]
name = "toon-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for TOON format - token-efficient JSON alternative for LLM prompts"
license = "MIT"
authors = ["copyleftdev"]
repository = "https://github.com/copyleftdev/toon-mcp"
homepage = "https://github.com/copyleftdev/toon-mcp"
keywords = ["mcp", "toon", "json", "llm", "token-optimization"]
categories = ["encoding", "development-tools"]

[[bin]]
name = "toon-mcp"
path = "src/main.rs"

[features]
default = []
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
toon-format = { version = "0.4", default-features = false }
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
thiserror = "2.0"
anyhow = "1.0"

tiktoken-rs = { version = "0.6", optional = true }

[dev-dependencies]
