[package]
name = "toon-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for TOON format - token-efficient JSON alternative for LLM prompts"
license = "MIT"
authors = ["copyleftdev"]
repository = "https://github.com/copyleftdev/toon-mcp"
homepage = "https://github.com/copyleftdev/toon-mcp"
keywords = ["mcp", "toon", "json", "llm", "token-optimization"]
categories = ["encoding", "development-tools"]

[[bin]]
name = "toon-mcp"
path = "src/main.rs"

[features]
default = ["mcp"]
mcp = ["dep:rmcp"]
http = ["dep:axum", "dep:tower-http", "dep:utoipa", "dep:utoipa-swagger-ui"]
full = ["mcp", "http"]
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
toon-format = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

# MCP dependencies (optional)
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"], optional = true }

# HTTP dependencies (optional)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
utoipa = { version = "5.3", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

# Optional dependencies
tiktoken-rs = { version = "0.6", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
